; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/oprofile/extr_op_model_avr32.c_avr32_perf_counter_reset.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/avr32/oprofile/extr_op_model_avr32.c_avr32_perf_counter_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PCCR = common dso_local global i32 0, align 4
@PCCR_R = common dso_local global i32 0, align 4
@PCCR_C = common dso_local global i32 0, align 4
@FC = common dso_local global i32 0, align 4
@F0 = common dso_local global i32 0, align 4
@F1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @avr32_perf_counter_reset to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @avr32_perf_counter_reset() #0 {
  %1 = load i32, i32* @PCCR, align 4
  %2 = load i32, i32* @PCCR_R, align 4
  %3 = call i32 @SYSREG_BIT(i32 %2)
  %4 = load i32, i32* @PCCR_C, align 4
  %5 = call i32 @SYSREG_BIT(i32 %4)
  %6 = or i32 %3, %5
  %7 = load i32, i32* @FC, align 4
  %8 = call i32 @SYSREG_BIT(i32 %7)
  %9 = or i32 %6, %8
  %10 = load i32, i32* @F0, align 4
  %11 = call i32 @SYSREG_BIT(i32 %10)
  %12 = or i32 %9, %11
  %13 = load i32, i32* @F1, align 4
  %14 = call i32 @SYSREG_BIT(i32 %13)
  %15 = or i32 %12, %14
  %16 = call i32 @sysreg_write(i32 %1, i32 %15)
  ret void
}

declare dso_local i32 @sysreg_write(i32, i32) #1

declare dso_local i32 @SYSREG_BIT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
